guides/tiered-prefix-cache/cpu/manifests/vllm/offloading-connector-arm64/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-d-model-server
spec:
  selector:
    llm-d.ai/inference-serving: "true"
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
